Update 8.2 Constant Members.md

--- a/059/Labs/8.2 Constant Members.md
+++ b/059/Labs/8.2 Constant Members.md
@@ -26,6 +26,9 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+![image](https://user-images.githubusercontent.com/100436724/236534820-3a4f49f7-c7e8-444c-bf79-cccb2905faa7.png)
+
 
 
 ## 8.2.2 Member constant (Constant ของ class)
@@ -57,6 +60,9 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/100436724/236538566-4ff37532-a77f-48e7-b549-a23bbc72ecf2.png)
 
 
 ## 8.2.3 Constant in expression
@@ -91,6 +97,9 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/100436724/236540022-f55c7c0f-9289-4742-9982-ee46a3c145f2.png)
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +127,10 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/100436724/236541019-ef44b71f-5ccc-4430-a9cf-042b5599cda4.png)
+
 
 ## 8.2.5 public static constant
 
@@ -143,14 +156,29 @@ namespace ConstantMemberExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/100436724/236542088-df5aaa8c-bb7d-454d-afce-afcb3f6b2f9b.png)
 
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
+```
+Local constants: ใช้งานได้เฉพาะในบล็อกที่ประกาศ
+Member constants: ใช้งานได้ทั้งภายในคลาสที่ประกาศ
+
+```
 
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+ ```
+ Local constants ไม่สามารถเปลี่ยนค่าได้ เนื่องจากถูกกำหนดค่าคงที่ (constant) ซึ่งหมายความว่าค่านั้นจะถูกตั้งค่าครั้งเดียวและไม่สามารถเปลี่ยนแปลงได้อีกในภายหลัง
+ การพยายามเปลี่ยนแปลงค่าของ local constants จะทำให้โค้ดไม่สามารถคอมไพล์ได้ และจะเกิดข้อผิดพลาด (error) ขึ้นในระหว่างการทำงาน (runtime error)
+ ```
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
+ ```
+ Member constants ไม่สามารถเปลี่ยนค่าภายหลังได้ เนื่องจากถูกกำหนดค่าคงที่ (constant) ซึ่งหมายความว่าค่านั้นจะถูกตั้งค่าครั้งเดียวและไม่สามารถเปลี่ยนแปลงได้อีกในภายหลัง 
+ การพยายามเปลี่ยนแปลงค่าของ member constants จะทำให้โค้ดไม่สามารถคอมไพล์ได้ และจะเกิดข้อผิดพลาด (error) ขึ้นในระหว่างการทำงาน (runtime error)
+ ```
 
  
