--- a/64030301 watcharaporn/8.3 Properties.md
+++ b/64030301 watcharaporn/8.3 Properties.md
@@ -31,6 +31,16 @@ namespace PropertyExample
     }
 }
 ```
+## อธิบายโค้ด
+```
+1.ประกาศคลาส Cat
+2.ประกาศ Property ชื่อ Age แบบอย่างง่าย
+3.สร้าง instance ของคลาส Cat โดยใช้ constructor ที่ไม่มี parameter
+4.เข้าถึง Property Age และกำหนดค่าเป็น 5 โดยใช้ Setter ของ Property
+5.อ่านค่า Property Age โดยใช้ Getter ของ Property และแสดงผลบน Console
+```
+## ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236545328-19474b6a-4c60-4e69-81b6-8fe3323abc9e.png)
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +69,19 @@ namespace PropertyExample
     }
 }
 ```
+## อธิบายโค้ด
+```
+1.สร้าง class ชื่อ Cat ที่มี 2 properties คือ Age และ SkinColor
+2.property อย่างง่าย มี getter, setter
+3.property อย่างง่าย มี getter, setter
+4.สร้าง object ชื่อ Garfield จาก class Cat
+5.กำหนดค่า property Age ของ object Garfield เป็น 5
+6.กำหนดค่า property SkinColor ของ object Garfield เป็น Color.Orange
+7.แสดงผลลัพธ์ใน console โดยแสดงค่า property Age และ SkinColor ของ object Garfield
+
+```
+## ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236545576-94855552-d553-47fd-95d9-d1f154da278d.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +113,22 @@ namespace PropertyExample
     }
 }
 ```
+## อธิบายโค้ด
+```
+1.สร้าง namespace PropertyExample สำหรับเก็บคลาสและโค้ดต่าง ๆ ที่เกี่ยวข้องกับ Property
+2.สร้างคลาส Cat ที่ประกอบด้วย Property 2 ตัวคือ Age และ SkinColor
+3.Property ชื่อ Age ที่สามารถเข้าถึงและแก้ไขค่าได้โดยตรงจากภายนอกคลาส Cat โดยไม่จำเป็นต้องผ่าน Method หรือ Function
+4.Property ชื่อ SkinColor ที่สามารถเข้าถึงและแก้ไขค่าได้โดยตรงจากภายนอกคลาส Cat โดยไม่จำเป็นต้องผ่าน Method หรือ Function
+5.สร้างคลาส Program ที่มี Method Main ซึ่งเป็น Method ที่จะถูกเรียกใช้งานในการรันโปรแกรม
+6.สร้าง Method หลักที่ถูกเรียกใช้งานในการรันโปรแกรม
+7.สร้าง Object ชื่อ Garfield ของคลาส Cat ด้วยคำสั่ง new Cat() เพื่อสร้าง Instance ของคลาส Cat ที่ชื่อ Garfield และเก็บไว้ในตัวแปร Garfield
+8.เรียกใช้ Setter ของ Property Age เพื่อกำหนดค่า Age ของ Garfield เป็น 5
+9. เรียกใช้ Getter ของ Property Age เพื่อดึงค่า Age ของ Garfield มาเก็บไว้ในตัวแปร catAge
+10. แสดงผลค่า catAge ออกทางหน้าจอ
+
+```
+## ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236547322-32fba3e9-8e0b-4505-9b51-4d6230f70608.png)
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +156,22 @@ namespace PropertyExample
     }
 }
 ```
+## อธิบายโค้ด
+```
+1.สร้าง namespace PropertyExample สำหรับเก็บคลาสและโค้ดต่าง ๆ ที่เกี่ยวข้องกับ Property
+2.สร้างคลาส Cat ที่ประกอบด้วย Property 2 ตัวคือ Age และ YearOfBirth
+3.Property ชื่อ Age ที่สามารถเข้าถึงและแก้ไขค่าได้โดยตรงจากภายนอกคลาส Cat โดยไม่จำเป็นต้องผ่าน Method หรือ Function
+4.Property ชื่อ YearOfBirth ที่สามารถเข้าถึงและแก้ไขค่าได้โดยตรงจากภายนอกคลาส Cat โดยไม่จำเป็นต้องผ่าน Method หรือ Function
+5.สร้างคลาส Program ที่มี Method Main ซึ่งเป็น Method ที่จะถูกเรียกใช้งานในการรันโปรแกรม
+6.สร้าง Method หลักที่ถูกเรียกใช้งานในการรันโปรแกรม
+7.สร้าง Object ชื่อ Garfield ของคลาส Cat ด้วยคำสั่ง new Cat() เพื่อสร้าง Instance ของคลาส Cat ที่ชื่อ Garfield และเก็บไว้ในตัวแปร Garfield
+8.เรียกใช้ Setter ของ Property YearOfBirth เพื่อกำหนดค่า YearOfBirth ของ Garfield เป็น 2015
+9.คำนวณอายุของ Garfield โดยการลบปีปัจจุบัน 2023 ด้วย YearOfBirth ของ Garfield
+10.แสดงผลค่าอายุของ Garfield ออกทางหน้าจอ
+
+```
+## ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236547636-b71e9473-f7d8-4cee-a077-fdcc47e2b43d.png)
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +201,21 @@ namespace PropertyExample
     }
 }
 ```
+## อธิบายโค้ด
+```
+1. สร้าง namespace PropertyExample สำหรับเก็บคลาสและโค้ดต่าง ๆ ที่เกี่ยวข้องกับ Property
+2.สร้างคลาส Cat ที่ประกอบด้วย Property 2 ตัวคือ Age และ YearOfBirth
+3.Property ชื่อ Age ที่มี Getter และ Setter ที่ถูกกำหนดแบบ Customized โดยการคำนวณอายุของแมวจากปีเกิด และ Getter ไม่รับ Parameter เพราะเป็นการคำนวณค่า
+4.Property ชื่อ YearOfBirth ที่สามารถเข้าถึงและแก้ไขค่าได้โดยตรงจากภายนอกคลาส Cat โดยไม่จำเป็นต้องผ่าน Method หรือ Function
+5.สร้างคลาส Program ที่มี Method Main ซึ่งเป็น Method ที่จะถูกเรียกใช้งานในการรันโปรแกรม
+6.สร้าง Method หลักที่ถูกเรียกใช้งานในการรันโปรแกรม
+7.สร้าง Object ชื่อ Garfield ของคลาส Cat ด้วยคำสั่ง new Cat() เพื่อสร้าง Instance ของคลาส Cat ที่ชื่อ Garfield และเก็บไว้ในตัวแปร Garfield
+8.เรียกใช้ Setter ของ Property YearOfBirth เพื่อกำหนดค่า YearOfBirth ของ Garfield เป็น 2015
+9.เรียกใช้ Getter ของ Property Age เพื่อแสดงผลอายุของ Garfield บนหน้าจอ
+
+```
+## ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236547812-99012101-0395-437e-9904-4f42a2040789.png)
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +256,50 @@ namespace PropertyExample
     }
 }
 ```
+## อธิบายโค้ด
+```
+1.ประกาศตัวแปร private สำหรับใช้เก็บข้อมูลอายุและปีเกิด
+2.ประกาศ Property ชื่อ Age และกำหนด Getter และ Setter
+3.Getter ใช้งาน DateTime.Now.Year หารอบปัจจุบันลบกับปีเกิด เพื่อหาอายุ
+4.Setter ใช้งาน value เพื่อเก็บค่าอายุลงในตัวแปร age
+5.และคำนวณหาปีเกิดจากการลบอายุกับปีปัจจุบัน
+6.ประกาศ Property ชื่อ YearOfBirth และกำหนด Getter และ Setter
+7.Getter ใช้งานตัวแปร yearOfBirth เพื่อคืนค่าปีเกิด
+8.Setter ใช้งาน value เพื่อเก็บค่าปีเกิดลงในตัวแปร yearOfBirth
+9.และคำนวณหาอายุจากการลบปีเกิดกับปีปัจจุบัน
+10.สร้าง Object ชื่อ Garfield จากคลาส Cat
+11.กำหนดค่า YearOfBirth ของ Garfield เป็น 2015
+12.แสดงผลลัพธ์อายุของ Garfield โดยเรียกใช้ Property Age
+
+```
+## ผลการทดลอง
+![image](https://user-images.githubusercontent.com/115066329/236547946-ece8ee99-25e1-444d-ae9e-f5b989e19479.png)
 
 ## คำถาม
 
-1. Fields และ properties ต่างกันอย่างไร
-
-2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
-3. value ใน setter หมายถึงอะไร
-
-4. return ใน setter ต้องมี type ตรงกับอะไร
+## 1. Fields และ properties ต่างกันอย่างไร
+```
+-Fields คือ ตัวแปรที่ถูกกำหนดไว้ในคลาสและใช้เก็บข้อมูลหรือสถานะของอ็อบเจ็กต์ 
+-Properties คือ วิธีการเข้าถึงและกำหนดค่าของข้อมูลภายในคลาส โดยใช้เมทอด getter และ setter
+เพื่อเข้าถึงและเปลี่ยนแปลงค่าของ fields ของอ็อบเจ็กต์
+```
+## 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
+```
+-ควรใช้ field เมื่อ
+1.ต้องการใช้งานตัวแปรภายในคลาสที่ไม่จำเป็นต้องมีการเข้าถึงจากภายนอก
+2.ต้องการใช้งานตัวแปรภายในคลาสเพื่อจัดเก็บข้อมูลและสถานะของอ็อบเจ็กต์เท่านั้น
+-ควรใช้ properties เมื่อ
+1.ต้องการมีการเข้าถึงและการเปลี่ยนแปลงข้อมูลภายในคลาสจากภายนอก
+2.ต้องการควบคุมการเข้าถึงและการเปลี่ยนแปลงข้อมูลโดยอัตโนมัติ โดยเชื่อมโยงกับ method เกี่ยวกับการตรวจสอบข้อมูลหรือการควบคุมการเข้าถึงข้อมูล
+3.ต้องการจำกัดสิทธิ์การเข้าถึงข้อมูลภายในคลาส
+การใช้งาน field หรือ properties ขึ้นอยู่กับความเหมาะสมของแต่ละสิ่งต่อแต่ละกรณี 
+และควรใช้ความรอบคอบในการเข้าถึงข้อมูลเพื่อเป็นการควบคุมการเปลี่ยนแปลงข้อมูลอย่างถูกต้องและปลอดภัย
+```
+## 3. value ใน setter หมายถึงอะไร
+```
+ตัวแปรที่ใช้เก็บค่าที่รับเข้ามาเพื่อกำหนดให้กับ property 
+```
+## 4. return ใน setter ต้องมี type ตรงกับอะไร
+```
+ต้องมี type เป็นชนิดเดียวกับ properties
+```
