Update 8.1 Static Member.md

--- a/64030192/8.1 Static Member.md
+++ b/64030192/8.1 Static Member.md
@@ -69,6 +69,12 @@ namespace StaticMemberExample
 }
 
 ```
+```
+คลาส Cat และ Duck มีตัวแปร legs อยู่ในทั้งสองคลาส 
+แต่ legs ใน Cat เป็นตัวแปร instance member ซึ่งจะถูกสร้างขึ้นมากับทุกตัวแปรวัตถุในคลาส Cat 
+แต่ legs ใน Duck เป็นตัวแปร static member ซึ่งจะเป็นแบบเดียวกันสำหรับทุกตัวแปรวัตถุในคลาส Duck
+```
+![image](https://user-images.githubusercontent.com/115066298/236551860-7734e9ac-8be2-476c-ba94-fb99bfe453d3.png)
 
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -113,6 +119,13 @@ namespace StaticMemberExample
     }
 }
 ```
+```
+จะมีการสร้าง instance ของ Cat และเรียกใช้งาน PrintCatCount() 
+เป็น static method ของ Cat เพื่อแสดงจำนวนแมวทั้งหมดที่ถูกสร้างขึ้นมาแล้ว
+จำนวนแมวที่ถูกสร้างเพิ่มขึ้นทุกครั้งที่มีการเรียกใช้งาน Constructor ของ Cat 
+และแสดงผลตามจำนวน instance ของแมวที่ถูกสร้างขึ้นมาในแต่ละช่วงของโค้ดด้วย static member ชื่อ count ที่ถูกอ้างผ่าน Class Cat.
+```
+![image](https://user-images.githubusercontent.com/115066298/236552341-4dba0b79-3ce5-4d58-b195-89cb0d6af0d5.png)
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +163,22 @@ namespace StaticMemberExample
     }
 }
 ```
-
+```
+คลาส Cat โดยมีฟิลด์ legs เป็นฟิลด์ instance 
+และฟิลด์ count เป็นฟิลด์ static ฟังก์ชันที่ชื่อ PrintCatCount เป็น static method 
+ใช้ในการพิมพ์จำนวนแมวทั้งหมดที่สร้างขึ้นมาในฟอร์แมทของข้อความเช่น "There is 1 cat" หรือ "There are 2 cats" โดยตัวแปร count จะถูกเพิ่มขึ้นทุกครั้งที่มีการสร้างแมว
+```
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
-
+- การประกาศและการเข้าถึงตัวแปร
+  - สำหรับ instance member จะประกาศในคลาสแต่ละ instance โดยใช้คีย์เวิร์ด this และสามารถเข้าถึงผ่านการอ้างอิงจากวัตถุที่สร้างจากคลาสนั้น ๆ ได้
+  - สำหรับ static member จะประกาศเป็นของคลาสโดยตรง โดยไม่ต้องสร้าง instance ของคลาส และสามารถเข้าถึงผ่านชื่อของคลาสที่เรียกใช้งานได้โดยตรง
+- การอ้างถึงตัวแปร
+  - instance member จะอ้างถึงผ่านวัตถุที่สร้างจากคลาสนั้น ๆ โดยใช้คีย์เวิร์ด this ซึ่งหมายความว่าจะมีลักษณะแตกต่างกันขึ้นกับวัตถุแต่ละตัวที่สร้างจากคลาสนั้น ๆ
+  - static member จะใช้ชื่อของคลาสในการอ้างถึงโดยตรงโดยไม่ต้องสร้างวัตถุของคลาสก่อนใช้งาน
 2. สถานการณ์ใดที่ควรใช้ static member
-
+```
+เหมาะสมในสถานการณ์ที่ต้องการเข้าถึงข้อมูลหรือฟังก์ชันโดยไม่จำเป็นต้องสร้าง instance ของคลาสนั้น ๆ
+```
