--- a/059/Labs/8.3 Properties.md
+++ b/059/Labs/8.3 Properties.md
@@ -31,6 +31,10 @@ namespace PropertyExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/100436724/236544353-f6026ce1-7fdc-47a7-9bd1-27a26aff5486.png)
+
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +63,9 @@ namespace PropertyExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/100436724/236545594-9a4d3c9e-b1cb-440b-b84c-c3ac668d382c.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,7 +97,9 @@ namespace PropertyExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
 
+![image](https://user-images.githubusercontent.com/100436724/236548523-5da98ec0-9ede-490e-b6aa-75b9f0b76266.png)
 
 ## 8.3.4 properties calculation
 
@@ -117,6 +126,10 @@ namespace PropertyExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/100436724/236549215-cba70fb8-f71e-45a7-bfcf-205a05245c7a.png)
+
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +159,9 @@ namespace PropertyExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+![image](https://user-images.githubusercontent.com/100436724/236549789-07a786ba-696d-4b5a-ae8f-e42a952071c3.png)
+
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +202,37 @@ namespace PropertyExample
     }
 }
 ```
+### อธิบายและผลการทดลอง
+
+![image](https://user-images.githubusercontent.com/100436724/236550819-cdd4725a-5399-4075-8cff-895fcd07cd62.png)
+
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
+```
+fields ใช้เก็บข้อมูลในคลาส สามารถเข้าถึงได้โดยตรงจากอ็อบเจกต์ ในขณะที่ properties เป็นเมธอดที่ใช้เข้าถึงหรือแก้ไขข้อมูลในฟิลด์ของอ็อบเจกต์ 
+ซึ่งจะมีการกำหนด getter และ setter ใน property เพื่อเข้าถึงและแก้ไขข้อมูลในฟิลด์นั้นๆ
+```
 
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
 
+```
+การเลือกใช้ field หรือ properties ขึ้นอยู่กับการออกแบบและวัตถุประสงค์ของคลาสหรืออ็อบเจกต์ในแต่ละกรณี โดยทั่วไปแล้ว:
+ใช้ field เมื่อต้องการเก็บข้อมูลหรือสถานะของอ็อบเจกต์ โดยไม่ต้องมีการเข้าถึงหรือแก้ไขข้อมูลนั้นจากภายนอก 
+หรือไม่ต้องมีการตรวจสอบหรือจำกัดการเข้าถึงข้อมูล
+ใช้ properties เมื่อต้องการให้มีการเข้าถึงหรือแก้ไขข้อมูลในฟิลด์ของอ็อบเจกต์ผ่านเมธอดตัวกลาง 
+ซึ่งสามารถนำไปใช้ในการตรวจสอบหรือจำกัดการเข้าถึงข้อมูลได้ โดยในภาษาโปรแกรมบางภาษา เช่น C# จะใช้คีย์เวิร์ด property 
+เพื่อบอกว่าเป็นเมธอดที่เป็นตัวกลางในการเข้าถึงข้อมูลภายในฟิลด์
+```
 3. value ใน setter หมายถึงอะไร
+```
+ค่าที่ถูกส่งเข้ามาเพื่อกำหนดค่าให้กับ property หรือ field ในอ็อบเจกต์ ซึ่งเป็น parameter 
+ที่ต้องระบุในเมธอด setter ของ property หรือเมธอด set ของ field ในภาษาโปรแกรมต่าง ๆ
+```
 
 4. return ใน setter ต้องมี type ตรงกับอะไร
+```
+ใน setter method ไม่จำเป็นต้องมีการระบุ type ใน return statement เนื่องจากเมื่อเรียกใช้ setter method 
+จะไม่มีการ return ค่าใด ๆ ออกมาจาก method นี้ แต่จะมีการกำหนดค่าให้กับ property หรือ field ในอ็อบเจกต์เท่านั้น
+```
