Update 8.2 Constant Members.md

--- a/64030192/8.2 Constant Members.md
+++ b/64030192/8.2 Constant Members.md
@@ -26,6 +26,13 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+คำนวณพื้นที่ของวงกลม โดยกำหนดค่าคงที่ PI เป็น 3.14159 
+และรับค่ารัศมีของวงกลมผ่านตัวแปร radius จากนั้นนำรัศมีไปคำนวณพื้นที่ของวงกลม 
+และแสดงผลลัพธ์ที่คำนวณได้ผ่าน Console ออกทางหน้าจอ
+```
+
+![image](https://user-images.githubusercontent.com/115066298/236553362-906d1c00-3838-4da5-b740-88dc88c09bc8.png)
 
 
 ## 8.2.2 Member constant (Constant ของ class)
@@ -57,7 +64,10 @@ namespace ConstantMemberExample
     }
 }
 ```
-
+```
+คำนวณพื้นที่ของวงกลมด้วยค่าคงที่ PI โดยใช้ static method ใน class MyCircle เพื่อคำนวณพื้นที่ของวงกลม โดยค่า PI ถูกกำหนดเป็นค่าคงที่ด้วย const keyword
+```
+![image](https://user-images.githubusercontent.com/115066298/236553597-fe6932ce-2351-4008-8d07-612f9495731a.png)
 
 ## 8.2.3 Constant in expression
 constant สามารถถูกนำไปใช้ใน expression ได้เช่นเดียวกับ variable ทั่วๆ ไป 
@@ -91,6 +101,14 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+คลาส MyCircle ที่มีสองเมทอดคือ PrintArea และ PrintCircumference เพื่อคำนวณพื้นที่วงกลมและเส้นรอบวงกลม
+MyCircle มี constant member ชื่อ PI ที่กำหนดค่าเป็น 3.14159 และ constant member ชื่อ PI2 ที่กำหนดค่าเป็นค่า 2 เท่าของ PI นั่นคือ 2 × 3.14159 = 6.28318
+PrintArea รับพารามิเตอร์เป็นรัศมีของวงกลม คำนวณพื้นที่วงกลมโดยใช้สูตร A = πr² และแสดงผลลัพธ์ออกทางหน้าจอ
+PrintCircumference รับพารามิเตอร์เป็นรัศมีของวงกลม คำนวณเส้นรอบวงกลมโดยใช้สูตร C = 2πr และแสดงผลลัพธ์ออกทางหน้าจอ
+Main เรียกใช้เมทอด PrintArea และ PrintCircumference ของคลาส MyCircle โดยส่งพารามิเตอร์เป็นค่ารัศมีของวงกลม (5.0f)
+```
+![image](https://user-images.githubusercontent.com/115066298/236553895-24d54873-ed60-48ce-ae55-6506cd34d8fc.png)
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +136,8 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+
 
 ## 8.2.5 public static constant
 
@@ -148,9 +168,16 @@ namespace ConstantMemberExample
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
+```
+Local constants และ Member constants ต่างกันตรงที่ Local constants จะมีขอบเขตการเข้าถึงของตัวแปรนั้นอยู่ใน block หรือ method ที่ประกาศ ในขณะที่ Member constants สามารถเข้าถึงได้ทุกส่วนของ class
+```
 
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```
+Local constants ไม่สามารถเปลี่ยนค่าภายหลังได้เนื่องจากเป็นค่าคงที่ที่ถูกกำหนดไว้ตั้งแต่ต้นของเมท็อด
+```
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```
+ไม่สามารถเปลี่ยนค่า member constants ได้ เนื่องจาก constants เป็นตัวแปรที่มีค่าคงที่และไม่สามารถเปลี่ยนแปลงค่าได้ในระหว่างการทำงานของโปรแกรม
+```
  
