--- a/64030192/8.3 Properties.md
+++ b/64030192/8.3 Properties.md
@@ -31,6 +31,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236555505-d3685d09-15b5-4210-9883-7ccd63878834.png)
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +60,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236555639-66ad56c3-7058-4463-8c59-6d0718e0bdcb.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +92,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236556327-d1583dc9-35c3-41af-a7ba-c00c959376c9.png)
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +120,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236556362-3c06b0d2-72ee-4dba-b3b4-ff476e712008.png)
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +150,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236556410-3de19841-2297-418a-a1d8-da2535043ee7.png)
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +191,27 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/115066298/236556469-2b7e4051-4ff4-4879-bcd5-64cd6ac9072d.png)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
+```
+Fields คือตัวแปร (variable) ที่ถูกประกาศในคลาส โดยมันถูกใช้ในการเก็บข้อมูลโดยตรงโดยไม่ผ่านเมธอด getter/setter แต่ถ้าอยากใช้ getter/setter ก็สามารถสร้างเมธอดเหล่านี้เพื่ออ่านค่าหรือกำหนดค่าให้กับตัวแปรได้
 
+Properties คือวิธีการเข้าถึงข้อมูลของ Fields โดยใช้ get/set accessor method หรืออาจเข้าถึงตัวแปรแบบไม่ได้ก็ได้ โดยมันเหมือนกับเมทอด getter/setter ในการเข้าถึงค่าของตัวแปรในคลาส
+```
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
+```
+Field ใช้เพื่อเก็บข้อมูลภายในคลาสหรือ struct โดยตรง โดยไม่ได้มีการจำกัดการเข้าถึงหรือการเปลี่ยนแปลงของข้อมูล
 
+Property ใช้เพื่อเข้าถึงหรือแก้ไขค่าของข้อมูลภายในคลาสหรือ struct โดยมีการกำหนดการตรวจสอบหรือการจำกัดการเข้าถึงข้อมูลเพื่อให้มีความปลอดภัย
+```
 3. value ใน setter หมายถึงอะไร
-
+```
+ค่าที่ถูก assign มาใน property นั้น ๆ โดย value จะมี type ตามกับ type ของ property นั้น ๆ 
+```
 4. return ใน setter ต้องมี type ตรงกับอะไร
+```
+ต้องมี type ตรงกับ property นั้น ๆ 
+```
