--- a/64030238/8.1 Static Member.md
+++ b/64030238/8.1 Static Member.md
@@ -34,7 +34,14 @@ namespace StaticMemberExample
 }
 
 ```
-
+```
+1.กำหนด Class Cat ให้มี int legs = 4 เป็น Instance member
+2.กำหนด Class Duck ให้มี int legs = 2 
+3.สร้าง Object Cat cat = new Cat();
+4.ให้แสดงข้อความ Cat has และการเรียกผ่าน Object cat.legs //ผลลัพธ์ที่ได้ Cat has 4 legs.
+5.ให้แสดงข้อความ Duck has และเรียกข้อมูลที่ในคลาส Duck.Leg //ผลลัพธ์ที่ได้ Duck has 2 legs.
+```
+![image](https://user-images.githubusercontent.com/103983336/236611937-990a6d1e-56f7-4e1c-b829-3bb5f75a892d.png)
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
 namespace StaticMemberExample
@@ -69,7 +76,20 @@ namespace StaticMemberExample
 }
 
 ```
-
+```
+1.ประกาศสร้าง Class ชื่อ Cat โดยภายในคลาสประกอบด้วย int legs = 4 โดยจะเป็น Instance member และ int connt = 0 เป็น static member โดยมี Constructor โดยจะให้เพิ่ม count ขึ้นทีละ 1
+2.ประกาศ internal class Program มี main method
+3.สร้าง Object ชื่อ cat โดยเรียกจากคลาส Cat()
+4.แสดงข้อความ There is (are) {Cat.count} cat(s). โดย Cat.count จะแสดงค่า count ภายในคลาส Cat
+5.สร้าง Object ชื่อ cat1 โดยเรียกใช้จากคลาส Cat()
+6.แสดงข้อความ There is (are) {Cat.count} cat(s). โดย Cat.count จะแสดงค่า count ภายในคลาส Cat
+7.สร้าง Array กำหนด type array เป็น Cat โดยกำหนดชื่อ Array เป็น catArray โดยให้มีขนาดของ array 10
+8.แสดงข้อความ There is (are) {Cat.count} cat(s). โดย Cat.count จะแสดงค่า count ภายในคลาส Cat
+9.ใช้คำสั่ง for โดยกำหนด i ให้มีค่าเท่ากับ 0 โดยถ้า i น้อยกว่า element ใน catArray; จะทำการเพิ่มค่า i ทีละ 1
+10.ภายใน for จะกำหนดให้ โดยตำแหน่งที่ i ของ catArray จะทำการสร้างคลาส Cat
+11.แสดงข้อความ There is (are) {Cat.count} cat(s). โดย Cat.count จะแสดงค่า count ภายในคลาส Cat
+```
+![image](https://user-images.githubusercontent.com/103983336/236614094-2ddb7888-9467-4588-a005-5e3eb10bd811.png)
 ## 8.1.3 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
 ```cs
@@ -113,6 +133,20 @@ namespace StaticMemberExample
     }
 }
 ```
+```
+1.ประกาศสร้าง Class Cat กำหนด int legs = 4 โดยกำหนดใหเ้เป็น Instance member กำหนด static int count = 0 เป็น static member 
+2.กำหนด Constractor ภายใน constractor ให้เพิ่มค่า count ทีละ 1
+3.สร้าง method ชื่อว่า PrintcatCount จะแสดงค่า count ภายใน PrintCatCount กำหนดเงื่อนไข ถ้า count เท่ากับ 1 จะแสดงข้อความ There is {count} cat ถ้ามากกว่า 1 จะแสดงข้อความ There are {count} cats ถ้าตรงตามเงื่อนไขจะแสดงข้อความ Invalid number of cats
+4.โดย internal class Program มี main method
+5.สร้าง Object ชื่อ cat โดยกำหนดจาก class Cat
+6.เรียกใช้ PrintCatCount จาก class Cat
+7.สร้าง Object ชื่อ cat1 โดยกำหนดจาก class Cat
+8.สร้าง Array โดยกำหนดชื่อ catArray โดยกำหนดให้ Array ให้มีขนาด 10 จาก class Cat
+9.เรียกใช้ PrintCatCount จาก class Cat
+10.ใช้ for กำหนด ค่า i = 0 ถ้า i น้อยกว่า catArray.Lenght; ให้เพิ่มค่า i ทีละ 1 ภายใน for กำหนด catArrat[i] โดยตำแหน่งที่ สร้าง class Cat
+11.เรียกใช้ PrintCatCount จาก class Cat
+```
+![image](https://user-images.githubusercontent.com/103983336/236618788-77c70382-a6bf-4bc6-9f8e-9e573c42e0b3.png)
 
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
@@ -150,11 +184,24 @@ namespace StaticMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236618833-e5e8aee9-b66a-4118-be15-bd6e4f7d7b08.png)
+```
+มี Error
+โดยการแก้ Cat.PrintCatCount();
+```
 
 
+![image](https://user-images.githubusercontent.com/103983336/236618872-790cf502-9c08-4113-b797-e011c900eba1.png)
 ## คำถาม
-
 1. Static member ต่างจาก instance member  อย่างไร
-
+```
+- Static mumber คือ ตัวแปรหรือ method ที่เพิ่ม keyword static ในตอนที่ประกาศตัวแปรหรือ method เช่น public static int count = 0; public static void printcatcount(){}
+  โดยตัวแปรและ method ที่เป็น static จะสร้างในตอนที่สร้าง class เพียงครั้งเดียวเท่านั้น สามารถเรียกใช้งานได้โดยสร้าง พิมพ์ชื่อคลาสและตามด้วยชื่อตัวแปรหรือ method เช่น Cat.printcatcount();
+- Instance member คือ ตัวแปรหรือ method ที่อยู่ในคลาส เช่น public int count = 0; public void princatcont(){} โดยตัวแปรและ method ที่เป็น Intance จะถูกสร้างใหม่ทุกครั้งที่สร้าง object
+  สามารถเรียกใช้ได้โดยสร้าง object และเรียกใช้งาน method หรือตัวแปร เช่น 
+  Cat cat = new Cat(); cat.count++; cat.prntcatcount();
+```
 2. สถานการณ์ใดที่ควรใช้ static member
-
+```
+เมื่อต้องการให้ค่าของตัวแปรหรือ method ใน class นั้นๆสามารถเข้าถึงได้โดยไม่ต้องส้ราง object ขึ้นมาก่อน
+```
