--- a/64030238/8.2 Constant Members.md
+++ b/64030238/8.2 Constant Members.md
@@ -26,6 +26,15 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+1.กำหนดตัวแปร radius ประเภทข้อมูลเป็น double กำหนดค่า 5.0
+2.กำหนดตัวแปร PI กำหนดเป็น const เป้นค่าคงที่ ประเภทข้อมูลเป็น double กำหนดค่าเป็น 3.14159
+3.แสดงข้อความ Welcome, this program calculate circle area
+4.แสดงข้อความ The radius of circle is {radius:f} unit. โดย radius:f แสดงค่าในตัวแปร radius
+5.กำหนดตัวแปร area ประเภทข้อมูลเป็น double ให้มีค่าเป็น PI * radius * radius
+6.แสดงข้อความ The area of circle is {area:f4} square unit. โดย area:f4 แสดงค่าในตัวแปร area f4 คือแสดงทศนิยม 4 ตำแหน่ง
+```
+![image](https://user-images.githubusercontent.com/103983336/236621541-ea2865df-a449-499d-9a8a-12a5e89373ca.png)
 
 
 ## 8.2.2 Member constant (Constant ของ class)
@@ -57,6 +66,15 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+1.ประกาศคลาส MyCircle
+2.ภายในคลาส MyCircle สร้างตัวแปร PI กำหนดประเภทข้อมูล double กำค่าเป็น const ให้เป็นค่าคงที่ มีค่า 3.14159
+3.กำหนด method ชื่อ PrintArea โดยรับพารามิสเตอร์เป็น double radius
+4.ภายใน method กำหนดตัวแปร area ประเภทข้อมูล double กำค่าให้เป็น PI*radius*radius 
+5.แสดงข้อความ The area of circle is {area:f4} square unit. โดย area:f4 แสดงข้อมูลในตัวแปร area f4 คือแสดงทศนิยม 4 ตำแหน่ง
+6.class program โดยมี main method เรียกใช้ method PrintArea(5.0f) ในคลาส MyCircle
+```
+![image](https://user-images.githubusercontent.com/103983336/236621865-b32a24a5-4f12-48b7-a284-f9cf217ed03c.png)
 
 
 ## 8.2.3 Constant in expression
@@ -91,7 +109,13 @@ namespace ConstantMemberExample
     }
 }
 ```
-
+```
+1.ประกาศคลาส MyCircle สร้างตัวแปร 2 ตัวชื่อ PI กับ PI2 กำหนด const เพื่อให้เป้นค่าคงที่และกำหนดประเภทข้อมูลเป็น double กำค่าตัวแปร PI เป็น 3.14159 กำค่าตัวแปร PI2 เป็น PI * 2.0
+2.สร้าง static method ชื่อ PrintArea รับพารามิเตอร์มา 1 ตัว double radius โดยภายใน method สร้างตัวแปร area เป้นประเภทข้อมูล double มีค่าเป็น PI * radius * radius และแสดงข้อความ The area of circle is {area:f4} square unit. โดย area:f4 แสดงข้อมูลใน area ทศนิยม 4 ตำแหน่ง
+3.สร้าง static method ชื่อ PrintCircumference รีบพารามิเตอร์ 1 ตัว double radius โดยภายใน method สร้างตัวแปร circumference เป็นประเภทข้อมูล double มีค่าเป็น PI2 * radius และแสดงข้อความ The circumference of circle is {circumference:f4} square unit. โดย circumference จะแสดงข้อความใน circumference แสดงทศนิยม 4 ตำแหน่ง
+4.class program ภายในคลาสมี method main โดยจะเรียกใช้ method PrintArea(5.0f) ในคลาส MyCircle และเรียนใช้ method PrintCircumference(5.0f) ในคลาส MyCircle
+ ```
+![image](https://user-images.githubusercontent.com/103983336/236622127-69d9ba07-a4fc-4fbc-b19c-d78d36aaa52a.png)
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
 
@@ -118,6 +142,14 @@ namespace ConstantMemberExample
     }
 }
 ```
+```
+1.ประกาศคลาส MyCircle ภายในคลาส สร้างตัวแปร PI ประเภทข้อมูล double โดยกำหนดให้เป็น const ให้เป็นค่าคงที่ กำค่าให้เป็น 3.14159 
+2.method PrintArea รับพารามิเตอร์ 1 ตัว double radius ภายใน method สร้างตัวแปร area ประเภทข้อมูล double มีค่าเป็น PI*radius*radius
+3.แสดงข้อความ The area of circle is {area:f4} square unit. โดย area:f4 แสดงข้อมูลใน area ทศนิยม 4 ตำแหน่ง
+4.class program มี main method ภายใน method เรียกใช้ method PrintArea(5.0) ในคลาส MyCircle
+```
+![image](https://user-images.githubusercontent.com/103983336/236622768-a7b4b9e9-7686-4912-b9b8-801be20d503c.png)
+
 
 ## 8.2.5 public static constant
 
@@ -143,14 +175,25 @@ namespace ConstantMemberExample
     }
 }
 ```
-
-
+```
+1.ประกาศคลาส MyCircle ภายในคลาส สร้างตัวแปร PI ประเภทข้อมูล double กำหนดเป็น const ให้ค่าคงที่ กำหนดค่าเป็น 3.141459
+2.สร้าง method PrintArea รับพารามิเตอร์ 1 ตัว double radius ภายใน method สร้างตัวแปร area ประเภทข้อมูล double ให้มีค่าเป็น PI*radius*radius และแสดงข้อความ he area of circle is {area:f4} square unit. โดย area:f4 แสดงข้อมูลใน area ทศนิยม 4 ตำแหน่ง
+3.class program มี main method ภายใน main method จะเรียกใช้ method PrintArea(5.0f) ในคลาส MyCircle
+```
+![image](https://user-images.githubusercontent.com/103983336/236623079-184437fa-8ea7-4cf8-a7f5-421d22decd25.png)
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
-
+```
+Local constance คือ ตัวแปรที่ถูกกำหนดให้เป้นค่าคงที่ซี่งถูกประกาศไว้ในส่วนของ method
+Member constants คือ ตัวแปรที่ถูกกำหนดเป้นค่าตงที่ซึ่งถูกประกาศไว้ใน c
+```
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```
+ไม่ได้ หากต้องการแก้ไขค่าคงที่ต้องแก้ไขในโค้ดเท่านั้น
+```
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
-
+```
+ไม่ได้ หากต้องการแก้ไขค่าคงที่ต้องแก้ไขในโค้ดเท่านั้น
+```
  
