--- a/64030238/8.3 Properties.md
+++ b/64030238/8.3 Properties.md
@@ -31,6 +31,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236623471-1b1bbc46-d276-4dee-a49a-21cd5fef1322.png)
+
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +61,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236623621-da6967e1-157c-4a63-8608-bba2f1f4b952.png)
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +93,39 @@ namespace PropertyExample
     }
 }
 ```
+```
+Error เพราะ ไม่สามารถเรียกใช้ get และ set ในฐานะ method ได้ 
+```
+```
+โค้ดที่ถูกต้อง
+```
+```cs
+using System.Drawing;
+namespace PropertyExample
+{
+
+    class Cat
+    {
+        public int Age { get; set; }
+        public Color SkinColor { get; set; }
+
+    }
+    internal class Program
+    {
+        static void Main(string[] args)
+        {
+            var Garfield = new Cat();
+            // callint setter
+            Garfield.Age = 5;
+
+            // calling getter
+            int catAge = Garfield.Age;
+            Console.WriteLine(catAge);
+        }
+    }
+}
+```
+![image](https://user-images.githubusercontent.com/103983336/236623677-2aeafb2e-1865-44b7-ad44-4a7ee7bdeebc.png)
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +153,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236623788-2a03bb9e-1595-4baa-be45-140c94494cbb.png)
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +183,7 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236623815-6e5790d4-8295-4e03-a9d8-5d1880407c26.png)
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +224,25 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/103983336/236623838-9b2cc4ab-ac91-4f55-8a0d-24ad1ffbcc16.png)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
-
+```
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลค่าได้ซึ่งถูกประกาศในคลาสเพื่อเก็บข้อมูล
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาสโดยไม่ต้องเขียน method โดยตะใช้ท method getter and setter ที่มีอยู่แล้วมาใช้สำหรับอ่านและเขียนข้อมูลของตัวแปร
+```
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
-
+```
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรงที่ไม่ต้องการการเข้าถึงและไม่ต้องการการตรวจสอบความถูกต้องของข้อมูล
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปรโดยต้อบงการให้มีการตรวจสอบความถูกต้องของข้อมูลที่รับเข้ามา และใช้ในตอนที่ต้องการคำนวณค่าข้อมูลเพื่อเก็บลงในคัวแปรโดยที่ไม่ต้องเขียน method เพื่อคำนวณค่า
+```
 3. value ใน setter หมายถึงอะไร
-
+```
+ตัวแปรพิเศษของ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties จะถูกเก็บไว้ที่ value ก่อนนั่นเอง
+```
 4. return ใน setter ต้องมี type ตรงกับอะไร
+```
+ต้องมี type เป็นชนิดเดียวกับ properties
+```
