Update 8.2 Constant Members.md

--- a/64030115 panwat/Labs/8.2 Constant Members.md
+++ b/64030115 panwat/Labs/8.2 Constant Members.md
@@ -26,6 +26,13 @@ namespace ConstantMemberExample
     }
 }
 ```
+1.ประกาศตัวแปร radius ชนิด double และกำหนดค่าเท่ากับ 5.0
+2.ประกาศตัวแปรคงที่ Pi ชนิด double และกำหนเค่าเท่ากับ 3.14
+3.แสดงข้อความยินดีต้อนรับ
+4.แสดงค่า radius
+5.ประกาศตัวแปร double area มีค่าคือ Pi * radius*radius
+6.แสดงค่า area
+![image](https://user-images.githubusercontent.com/116150897/236661806-576e278f-7f80-4493-9d29-6e4b9fa3fb9a.png)
 
 
 ## 8.2.2 Member constant (Constant ของ class)
@@ -57,6 +64,12 @@ namespace ConstantMemberExample
     }
 }
 ```
+1.ประกาศ class Mycircle
+2.ประกาศตัวแปรค่าคงที่ ชนิด double ชื่อ PI
+3.ประกาศ method PrintArea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4.สร้าง class program และ method main จากนั้นก็เรียกใช้ method printarea จาก class  mycircle
+![image](https://user-images.githubusercontent.com/116150897/236661968-c04f6b4a-f357-447c-b482-c4234747a378.png)
+
 
 
 ## 8.2.3 Constant in expression
@@ -91,6 +104,13 @@ namespace ConstantMemberExample
     }
 }
 ```
+1.ประกาศ class mycircle
+2.ประกาตัวแปรคงที่ชนิด double ชื่อ PI และ PI2
+3.สร้าง static method printarea ที่รับค่า radius โดยประกาศตัวแปร area ที่มีค่าคือ PI * radius * radius และแสดงผลค่า area ในแบบทศนิยม 4 ตำแหน่ง
+4.สร้าง static method  printcircumference ที่รับค่า radius โดยประกาศตัวแปร circumference ที่มีค่าคือ PI2 * radius และแสดงผลค่า circumference ในแบบทศนิยม 4 ตำแหน่ง
+5.ประกาศ class program และ method main ที่เรียกใช้ method printarea และ printcircumference จาก class mycircle โดยส่งค่า 5.0 เป็นพารามิเตอร์ไปยัง method
+![image](https://user-images.githubusercontent.com/116150897/236662046-4512a549-923e-4feb-98b7-9f2b506ca8d2.png)
+
 
 ## 8.2.4 change value of constant
 ถ้าพยายามกำหนดค่าใหม่ให้แก่ constant จะเกิด error ในขั้นตอนการ compile
@@ -118,6 +138,8 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236662095-29e564bd-a0a5-4dbe-af26-fe3186cd6e35.png)
+
 
 ## 8.2.5 public static constant
 
@@ -143,14 +165,23 @@ namespace ConstantMemberExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236662192-263c7c7e-d6a1-4c9a-969e-5f9813261b39.png)
+
 
 
 ## คำถาม
 
 1. Local constants ต่างจาก member constants อย่างไร
 
+Local constance คือ ตัวแปรที่ถูกกำหนดให้เป็นค่าคงที่ที่ประกาศไว้ในของ method
+Member constance คือ ตัวแปรที่ถูกกกำหนดเป็นค่าตรงทีซึ่งถูกประกาศไว้ใน class
+
 2. Local constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
 
+ใช้ไม่ได้ ถ้าต้องการแก้ให้แก้ในโค้ดเท่านั้น
+
 3. Member constants สามารถเปลี่ยนค่าภายหลังได้หรือไม่
+
+ใช้ไม่ได้ ถ้าต้องการแก้ให้แก้ในโค้ดเท่านั้น
 
  
