--- a/64030115 panwat/Labs/8.3 Properties.md
+++ b/64030115 panwat/Labs/8.3 Properties.md
@@ -31,6 +31,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236662260-4c124f87-26e4-458d-8b9e-67cafef76c1e.png)
+
 
 ## 8.3.2 เพิ่ม property
 
@@ -59,6 +61,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236662279-261fa3bb-11d0-4a5d-82b1-47ef19fa6149.png)
+
 
 
 ## 8.3.3  การใช้งาน getter/setter
@@ -90,6 +94,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236662346-9529859e-f638-4d5a-93b1-4ded96f1440a.png)
+
 
 
 ## 8.3.4 properties calculation
@@ -117,6 +123,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236662393-095d273a-780a-4b6b-926b-8b49427bb8d7.png)
+
 
 ## 8.3.5 properties calculation
 
@@ -146,6 +154,8 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236662416-1d26e4dc-1907-44b0-99e5-2544e7d13631.png)
+
 
 ## 8.3.6 properties calculation
 
@@ -186,13 +196,24 @@ namespace PropertyExample
     }
 }
 ```
+![image](https://user-images.githubusercontent.com/116150897/236662440-b48373a9-10cf-49c0-b30b-ec9270f33025.png)
 
 ## คำถาม
 
 1. Fields และ properties ต่างกันอย่างไร
 
+Field คือ ตัวแปรที่สามารถเปลี่ยนแปลงค่าได้
+properties คือ วิธีการเข้าถึงและกำหนดค่าของตัวแปรภายในคลาส
+
 2. เมื่อใดควรใช้ field และเมื่อใดควรใช้ properties
+
+Field ใช้ตอนที่ต้องการเก็บข้อมูลโดยตรง
+properties ใช้ตอนที่ต้องการเข้าถึงหรือตั้งค่าตัวแปร
 
 3. value ใน setter หมายถึงอะไร
 
+ตัวแปรพิเศษ property ที่ใช้สำหรับเป็นตัวแทนของข้อมูลที่กำลังจะ set ให้กับ properties โดยข้อมูลที่จะ set ให้ properties ถูกเก็บไว้ใน value
+
 4. return ใน setter ต้องมี type ตรงกับอะไร
+
+ต้องมี type เป็นชนิดเดียวกับ properties
