Update 8.1 Static Member.md

--- a/64030183/Labs/8.1 Static Member.md
+++ b/64030183/Labs/8.1 Static Member.md
@@ -35,6 +35,26 @@ namespace StaticMemberExample
 
 ```
 
+![image](https://user-images.githubusercontent.com/115066431/236663419-36771497-29d2-43af-a23e-2e8858f5b15f.png)
+
+```cs
+namespace StaticMemberExample เป็นการกำหนด namespace ของโปรแกรม
+
+class Cat เป็นการกำหนดคลาส Cat ที่มี field legs ที่กำหนดให้มีค่าเท่ากับ 4
+
+class Duck เป็นการกำหนดคลาส Duck ที่มี field legs ที่กำหนดให้เป็น static และกำหนดค่าเท่ากับ 2
+
+internal class Program เป็นการกำหนดคลาส Program ซึ่งกำหนดให้มีการเข้าถึงได้ภายใน assembly เท่านั้น
+
+static void Main(string[] args) เป็นเมธอดหลักที่ถูกเรียกใช้เมื่อโปรแกรมรัน และรับ parameter เป็น array ของ string args
+
+Cat cat = new Cat(); สร้าง object ชื่อ cat จากคลาส Cat โดยใช้ constructor
+
+Console.WriteLine($"Cat has {cat.legs} legs."); แสดงผลลัพธ์ข้อความ "Cat has [legs] legs." โดย legs จะมีค่าเท่ากับ field legs ของ cat ซึ่งเป็น instance member
+
+Console.WriteLine($"Duck has {Duck.legs} legs"); แสดงผลลัพธ์ข้อความ "Duck has [legs] legs." โดย legs จะมีค่าเท่ากับ field legs ของ Duck ซึ่งเป็น static member
+```
+
 ## 8.1.2 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 ```cs
 namespace StaticMemberExample
@@ -114,6 +134,7 @@ namespace StaticMemberExample
 }
 ```
 
+
 ## 8.1.4 ให้อธิบายการทำงานของโปรแกรมต่อไปนี้ พร้อมทั้งบันทึกผลการทดลอง
 
 ```cs
@@ -151,10 +172,29 @@ namespace StaticMemberExample
 }
 ```
 
+```cs
+โค้ดไม่มี error แต่มีบรรทัดที่ไม่จำเป็น ในบรรทัด cat1.PrintCatCount(); ไม่จำเป็นต้องเรียกฟังก์ชัน PrintCatCount() ผ่าน instance cat1 ได้ เนื่องจาก PrintCatCount() เป็น static method ที่สามารถเรียกใช้งานผ่านชื่อคลาสได้เลย ดังนั้น เรียกใช้ Cat.PrintCatCount(); ก็เพียงพอแล้ว
+```
+
+![image](https://user-images.githubusercontent.com/115066431/236663704-62df2e03-5096-419e-bca8-ddebde16c8f7.png)
+
 
 ## คำถาม
 
 1. Static member ต่างจาก instance member  อย่างไร
+```cs
+Static member และ instance member เป็นสมาชิกของ class ที่แตกต่างกันอย่างมากเนื่องจากการทำงานและการใช้งานต่างกัน
+
+1.Static member เป็นสมาชิกของ class ที่ถูกสร้างขึ้นเมื่อ class ถูกโหลดเข้าไปในหน่วยความจำและมีอยู่ตลอดระยะเวลาที่โปรแกรมทำงาน ซึ่งแตกต่างจาก instance member ที่ถูกสร้างขึ้นเมื่อมีการสร้าง object ของ class นั้นๆ
+
+2.Static member เรียกใช้ได้โดยไม่ต้องสร้าง object ของ class ใหม่ สามารถเรียกใช้งานได้โดยตรงผ่านชื่อ class โดยไม่ต้องอ้างอิงถึง object ใดๆ ในขณะที่ instance member จะต้องอ้างอิงถึง object ของ class ที่มีอยู่และเรียกใช้งานผ่าน object นั้นๆ
+
+3.Static member สามารถเปลี่ยนแปลงค่าได้และมีผลต่อทุก object ของ class ที่มีอยู่ ในขณะที่ instance member จะมีค่าที่แตกต่างกันของแต่ละ object
+
+4.Static member สามารถเข้าถึงได้ทุกที่ในโปรแกรม ในขณะที่ instance member จะมีขอบเขตการเข้าถึงเฉพาะใน object ของ class นั้นๆเท่านั้น
+```
 
 2. สถานการณ์ใดที่ควรใช้ static member
-
+```cs
+เหมาะสมกับสถานการณ์ที่เราต้องการสร้างค่าหรือเก็บค่าที่เป็นร่วมกัน (shared values) ระหว่าง object ทั้งหมดใน class โดยไม่ต้องสร้าง instance ของ class นั้น ๆ ก่อน หรือสถานการณ์ที่เราต้องการเรียกใช้ method ของ class โดยไม่ต้องสร้าง object ขึ้นมาก่อน
+```
